--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "express": "^4.17.1",
     "mysql": "^2.18.1"
   },
+  "scripts": {
+    "start": "node server.js"
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
