--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "mysql": "^2.18.1"
   },
   "scripts": {
-    "start": "node App.js"
+    "start": "node server.js"
   },
   "eslintConfig": {
     "extends": "react-app"
